@@ -1,4 +1,8 @@
-2006-06-25 rixed@free/fr
+2006-06-28 rixed@free.fr
+	* Addition of transpose-compose.
+	* More pictures and animations in codealone.
+
+2006-06-25 rixed@free.fr
 	* Command to add the user-defined clipplanes.
 	* Shadow rendering.
 
